# python-project-template

./: LICENCE  Makefile  README.md  pyproject.toml
tests/: test_placeholder.py
